proper beamformer stats + ECG_ICA tests

--- a/code/stats.ipynb
+++ b/code/stats.ipynb
@@ -493,53 +493,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<xarray.DataArray (state: 3, subject: 34, time: 30, src: 20484)>\n",
-       "array([[[[ 1.037445, ...,  1.313395],\n",
-       "         ..., \n",
-       "         [ 0.924809, ...,  1.157241]],\n",
+       "<xarray.DataArray (state: 3, subject: 34, time: 50, src: 20484)>\n",
+       "array([[[[ 8.556109e-03, ...,  2.134121e-02],\n",
+       "         ...,\n",
+       "         [ 4.530383e-02, ...,  1.810445e-02]],\n",
        "\n",
-       "        ..., \n",
-       "        [[ 2.193321, ...,  3.401938],\n",
-       "         ..., \n",
-       "         [ 2.362566, ...,  3.154897]]],\n",
+       "        ...,\n",
+       "\n",
+       "        [[ 1.169846e-01, ...,  8.895773e-02],\n",
+       "         ...,\n",
+       "         [ 1.032996e-01, ...,  1.014239e-01]]],\n",
        "\n",
        "\n",
-       "       ..., \n",
-       "       [[[ 2.098647, ...,  0.521874],\n",
-       "         ..., \n",
-       "         [ 0.565686, ...,  0.815951]],\n",
+       "       ...,\n",
        "\n",
-       "        ..., \n",
-       "        [[-0.164982, ...,  0.36904 ],\n",
-       "         ..., \n",
-       "         [ 1.63122 , ...,  0.846094]]]])\n",
+       "\n",
+       "       [[[ 3.722164e-02, ...,  3.015478e-02],\n",
+       "         ...,\n",
+       "         [ 2.718116e-02, ...,  2.640520e-02]],\n",
+       "\n",
+       "        ...,\n",
+       "\n",
+       "        [[-4.905814e-06, ...,  5.309783e-02],\n",
+       "         ...,\n",
+       "         [ 9.928549e-02, ...,  2.555502e-02]]]])\n",
        "Coordinates:\n",
        "  * time     (time) float64 0.1 0.105 0.11 0.115 0.12 0.125 0.13 0.135 0.14 ...\n",
+       "  * subject  (subject) object '002' '004' '007' '010' '012' '014' '016' ...\n",
        "  * state    (state) object 'RS' 'FA' 'OM'\n",
-       "  * src      (src) object 'lh_0' 'lh_1' 'lh_2' 'lh_3' 'lh_4' 'lh_5' 'lh_6' ...\n",
-       "  * subject  (subject) object '002' '004' '007' '010' '012' '014' '016' ..."
+       "  * src      (src) object 'lh_0' 'lh_1' 'lh_2' 'lh_3' 'lh_4' 'lh_5' 'lh_6' ..."
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_file = op.join(stc_path, 'fsaverage', 'DATASET-{}-surface_{}-{}Hz.nc'.format(noise_cov, surface, sfreq))\n",
+    "data_file = op.join(stc_path, 'fsaverage', 'DATASET-{}-surface_{}-{}Hz-beamformer.nc'.format(noise_cov, surface, sfreq))\n",
     "stc = xr.open_dataarray(data_file, name)\n",
     "stc.load()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,15 +593,18 @@
     "    stats.to_netcdf(path=stat_file, group=test_key, mode=mode)\n",
     "    \n",
     "    if np.where(cluster_pv <= fif_significance)[0].size:\n",
-    "        clu_sum = summarize_clusters_stc(clu_all, tstep=1/sfreq, tmin=times[0])\n",
-    "        clu_sum.save(op.splitext(stat_file)[0] + '-' + test_key)\n",
+    "        clu_sum = summarize_clusters_stc(clu_all, tstep=1, tmin=0)\n",
+    "        clu_sum.save(op.splitext(stat_file)[0] + '-' + test_key + '-summary')\n",
+    "        \n",
+    "        stats_stc = mne.SourceEstimate(np.where(p_val <= fif_significance, T_obs, 0).T, [np.arange(10242), np.arange(10242)], times[0], 1/sfreq, 'fsaverage')\n",
+    "        stats_stc.save(op.splitext(stat_file)[0] + '-' + test_key)\n",
     "    \n",
     "    return clu_all"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,6 +647,26 @@
    "metadata": {},
    "source": [
     "# Heartbeat Evoked Response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(50, 20484)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clu['RS_vs_FA'][0].shape"
    ]
   },
   {
@@ -728,110 +755,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "stat_fun(H1): min=-3.312425 max=4.769473\n",
+      "stat_fun(H1): min=-5.528916 max=3.513895\n",
       "Running initial clustering\n",
-      "Found 274 clusters\n",
-      "Permuting 1023 times...\n"
+      "Found 489 clusters\n",
+      "Permuting 1023 times...\n",
+      "[..................................      ] 86.82171 \\    "
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=4)]: Done   2 out of   4 | elapsed:  1.7min remaining:  1.7min\n",
-      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.8min remaining:    0.0s\n",
-      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.8min finished\n"
+      "[Parallel(n_jobs=4)]: Done   2 out of   4 | elapsed:  4.0min remaining:  4.0min\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Computing cluster p-values\n",
-      "Done.\n",
-      "stat_fun(H1): min=-4.112317 max=6.449883\n",
-      "Running initial clustering\n",
-      "Found 748 clusters\n",
-      "Permuting 1023 times...\n"
+      "[....................................... ] 99.22481 |    Computing cluster p-values\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=4)]: Done   2 out of   4 | elapsed:  1.9min remaining:  1.9min\n",
-      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  2.0min remaining:    0.0s\n",
-      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  2.0min finished\n"
+      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  4.2min remaining:    0.0s\n",
+      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  4.2min finished\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Computing cluster p-values\n",
       "Done.\n",
-      "stat_fun(H1): min=-6.711287 max=5.298095\n",
+      "Writing STC to disk...\n",
+      "[done]\n",
+      "Writing STC to disk...\n",
+      "[done]\n",
+      "stat_fun(H1): min=-6.958375 max=4.619963\n",
       "Running initial clustering\n",
-      "Found 680 clusters\n",
-      "Permuting 1023 times...\n"
+      "Found 389 clusters\n",
+      "Permuting 1023 times...\n",
+      "[..................................      ] 86.82171 \\    "
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=4)]: Done   2 out of   4 | elapsed:  2.3min remaining:  2.3min\n",
-      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  2.4min remaining:    0.0s\n",
-      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  2.4min finished\n"
+      "[Parallel(n_jobs=4)]: Done   2 out of   4 | elapsed:  3.8min remaining:  3.8min\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Computing cluster p-values\n",
-      "Done.\n",
-      "stat_fun(H1): min=-7.365279 max=9.533201\n",
-      "Running initial clustering\n",
-      "Found 1085 clusters\n",
-      "Permuting 511 times (exact test)...\n"
+      "[....................................... ] 99.22481 |    "
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=4)]: Done   2 out of   4 | elapsed:  1.0min remaining:  1.0min\n",
-      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.1min remaining:    0.0s\n",
-      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.1min finished\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Computing cluster p-values\n",
-      "Done.\n",
-      "stat_fun(H1): min=-9.362371 max=9.190606\n",
-      "Running initial clustering\n",
-      "Found 1399 clusters\n",
-      "Permuting 511 times (exact test)...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=4)]: Done   2 out of   4 | elapsed:   55.6s remaining:   55.6s\n",
-      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:   57.6s remaining:    0.0s\n",
-      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:   57.6s finished\n"
+      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  4.0min remaining:    0.0s\n",
+      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  4.0min finished\n"
      ]
     },
     {
@@ -842,90 +837,8 @@
       "Done.\n",
       "Writing STC to disk...\n",
       "[done]\n",
-      "stat_fun(H1): min=-9.217814 max=8.394035\n",
-      "Running initial clustering\n",
-      "Found 1259 clusters\n",
-      "Permuting 511 times (exact test)...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=4)]: Done   2 out of   4 | elapsed:   49.9s remaining:   49.9s\n",
-      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:   51.7s remaining:    0.0s\n",
-      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:   51.7s finished\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Computing cluster p-values\n",
-      "Done.\n",
-      "stat_fun(H1): min=-3.871768 max=4.895330\n",
-      "Running initial clustering\n",
-      "Found 351 clusters\n",
-      "Permuting 1023 times...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=4)]: Done   2 out of   4 | elapsed:  1.4min remaining:  1.4min\n",
-      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.5min remaining:    0.0s\n",
-      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.5min finished\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Computing cluster p-values\n",
-      "Done.\n",
-      "stat_fun(H1): min=-5.167691 max=6.805124\n",
-      "Running initial clustering\n",
-      "Found 746 clusters\n",
-      "Permuting 1023 times...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=4)]: Done   2 out of   4 | elapsed:  1.4min remaining:  1.4min\n",
-      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.5min remaining:    0.0s\n",
-      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.5min finished\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Computing cluster p-values\n",
-      "Done.\n",
-      "stat_fun(H1): min=-6.376806 max=5.736199\n",
-      "Running initial clustering\n",
-      "Found 747 clusters\n",
-      "Permuting 1023 times...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=4)]: Done   2 out of   4 | elapsed:  1.9min remaining:  1.9min\n",
-      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.9min remaining:    0.0s\n",
-      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.9min finished\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Computing cluster p-values\n",
-      "Done.\n"
+      "Writing STC to disk...\n",
+      "[done]\n"
      ]
     }
    ],
@@ -1882,7 +1795,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.5.2"
   },
   "toc": {
    "base_numbering": 1,
