average med states

--- a/code/stats_PSD.ipynb
+++ b/code/stats_PSD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-05-31T16:28:38.455672Z",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-05-31T16:28:49.581843Z",
@@ -69,75 +69,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<xarray.DataArray (state: 5, subject: 55, chan: 275, freq: 2049)>\n",
-       "array([[[[1.520515e-06, ..., 7.038912e-11],\n",
-       "         ...,\n",
-       "         [8.324049e-07, ..., 5.819002e-11]],\n",
-       "\n",
-       "        ...,\n",
-       "\n",
-       "        [[1.743167e-06, ..., 4.646666e-11],\n",
-       "         ...,\n",
-       "         [5.782697e-07, ..., 5.195834e-11]]],\n",
-       "\n",
-       "\n",
-       "       ...,\n",
-       "\n",
-       "\n",
-       "       [[[         nan, ...,          nan],\n",
-       "         ...,\n",
-       "         [         nan, ...,          nan]],\n",
-       "\n",
-       "        ...,\n",
-       "\n",
-       "        [[7.007803e-07, ..., 7.731861e-11],\n",
-       "         ...,\n",
-       "         [3.977057e-07, ..., 7.051495e-11]]]])\n",
-       "Coordinates:\n",
-       "  * subject  (subject) object '007' '012' '014' '016' ... '105' '108' '109'\n",
-       "  * state    (state) object 'RS1' 'FA1' 'FA2' 'OM1' 'OM2'\n",
-       "  * chan     (chan) object 'MLC11' 'MLC12' 'MLC13' ... 'MZO02' 'MZO03' 'MZP01'\n",
-       "  * freq     (freq) float64 0.0 0.1465 0.293 0.4395 ... 299.6 299.7 299.9 300.0"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "PSD = xr.open_dataarray(op.join(Analysis_path, task, 'meg', 'Alpha', 'PSD.nc'))\n",
-    "PSD.load()\n",
-    "PSD.transpose('state', 'subject', 'freq', 'chan')\n",
-    "PSD_norm = PSD/PSD.sum(['chan', 'freq'])\n",
-    "print(PSD_norm)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<xarray.DataArray (state: 5, subject: 55, chan: 275, freq: 2049)>\n",
-      "array([[[[1.520515e-06, ..., 7.038912e-11],\n",
+      "<xarray.DataArray (state: 5, subject: 55, freq: 2049, chan: 275)>\n",
+      "array([[[[1.520515e-06, ..., 8.324049e-07],\n",
       "         ...,\n",
-      "         [8.324049e-07, ..., 5.819002e-11]],\n",
+      "         [7.038912e-11, ..., 5.819002e-11]],\n",
       "\n",
       "        ...,\n",
       "\n",
-      "        [[1.743167e-06, ..., 4.646666e-11],\n",
+      "        [[1.743167e-06, ..., 5.782697e-07],\n",
       "         ...,\n",
-      "         [5.782697e-07, ..., 5.195834e-11]]],\n",
+      "         [4.646666e-11, ..., 5.195834e-11]]],\n",
       "\n",
       "\n",
       "       ...,\n",
@@ -149,9 +97,9 @@
       "\n",
       "        ...,\n",
       "\n",
-      "        [[7.007803e-07, ..., 7.731861e-11],\n",
+      "        [[7.007803e-07, ..., 3.977057e-07],\n",
       "         ...,\n",
-      "         [3.977057e-07, ..., 7.051495e-11]]]])\n",
+      "         [7.731861e-11, ..., 7.051495e-11]]]])\n",
       "Coordinates:\n",
       "  * subject  (subject) object '007' '012' '014' '016' ... '105' '108' '109'\n",
       "  * state    (state) object 'RS1' 'FA1' 'FA2' 'OM1' 'OM2'\n",
@@ -160,11 +108,68 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "PSD = xr.open_dataarray(op.join(Analysis_path, task, 'meg', 'Alpha', 'PSD.nc'))\n",
+    "PSD.load()\n",
+    "PSD = PSD.transpose('state', 'subject', 'freq', 'chan')\n",
+    "PSD_norm = PSD/PSD.sum(['freq', 'chan'])\n",
+    "print(PSD_norm)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<xarray.DataArray (state: 3, subject: 55, freq: 2049, chan: 275)>\n",
+      "array([[[[1.520515e-06, ..., 8.324049e-07],\n",
+      "         ...,\n",
+      "         [7.038912e-11, ..., 5.819002e-11]],\n",
+      "\n",
+      "        ...,\n",
+      "\n",
+      "        [[1.743167e-06, ..., 5.782697e-07],\n",
+      "         ...,\n",
+      "         [4.646666e-11, ..., 5.195834e-11]]],\n",
+      "\n",
+      "\n",
+      "       ...,\n",
+      "\n",
+      "\n",
+      "       [[[9.130033e-07, ..., 1.135848e-06],\n",
+      "         ...,\n",
+      "         [1.008259e-10, ..., 7.461664e-11]],\n",
+      "\n",
+      "        ...,\n",
+      "\n",
+      "        [[7.469942e-07, ..., 4.607345e-07],\n",
+      "         ...,\n",
+      "         [7.579208e-11, ..., 6.598015e-11]]]])\n",
+      "Coordinates:\n",
+      "  * state    (state) <U2 'RS' 'FA' 'OM'\n",
+      "  * subject  (subject) object '007' '012' '014' '016' ... '105' '108' '109'\n",
+      "  * freq     (freq) float64 0.0 0.1465 0.293 0.4395 ... 299.6 299.7 299.9 300.0\n",
+      "  * chan     (chan) object 'MLC11' 'MLC12' 'MLC13' ... 'MZO02' 'MZO03' 'MZP01'\n"
+     ]
+    }
+   ],
+   "source": [
+    "PSD_ave = np.empty((len(states), *PSD.shape[1:]))\n",
+    "for s,state in enumerate(states):\n",
+    "    PSD_ave[s] = PSD_norm.loc[fnmatch.filter(PSD_norm.state.values, state+'*')].mean('state').values\n",
+    "coords = {dim: PSD_norm.coords[dim].values for dim in PSD_norm.dims}\n",
+    "coords.update({'state': states})\n",
+    "PSD_ave = xr.DataArray(PSD_ave, dims=PSD_norm.dims, coords=coords)\n",
+    "print(PSD_ave)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,8 +225,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fmin = PSD_norm.freq.values[0]\n",
-    "fmax = PSD_norm.freq.values[-1]\n",
+    "fmin = 2 #PSD_norm.freq.values[0]\n",
+    "fmax = 45 #PSD_norm.freq.values[-1]\n",
     "stat_path = op.join(Analysis_path, task, 'meg', 'Stats', 'PSD')\n",
     "os.makedirs(stat_path, exist_ok=True)\n",
     "stat_file = op.join(stat_path, '{}-{}Hz.nc'.format(fmin, fmax))\n",
@@ -481,7 +486,7 @@
    ],
    "source": [
     "for key,val in paired_tests.items():\n",
-    "    clu[key] = sensor_perm_test(PSD_norm.loc[val[0],val[2],fmin:fmax].values, PSD_norm.loc[val[1],val[2],fmin:fmax].values, stat_file=stat_file, test_key=key, freqs=PSD_norm.loc[:,:,fmin:fmax].freq.values, sensors=PSD_norm.chan.values.tolist(), paired=True)"
+    "    clu[key] = sensor_perm_test(PSD_ave.loc[val[0],val[2],fmin:fmax].values, PSD_ave.loc[val[1],val[2],fmin:fmax].values, stat_file=stat_file, test_key=key, freqs=PSD_ave.loc[:,:,fmin:fmax].freq.values, sensors=PSD_ave.chan.values.tolist(), paired=True)"
    ]
   }
  ],
